--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebSocket Chat</title>
+    <style> 
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 20px;
+        }
+        #auth-section, #chatroom-section {
+            margin-bottom: 20px;
+        }
+        #messages{
+            height: 200px;
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin-bottom: 10px;
+            overflow-y: scroll;
+        }
+        input , button {
+            margin: 5px;
+            padding: 10px;
+        }
+        .error {
+            color: red;
+        }
+    </style>
 </head>
 <body>
-    
+    <!-- Login/Register Section -->
+     <div id="auth-section">
+        <h2>Login / Register</h2>
+        <input type="text" id="username" placeholder="username">
+        <input type="password" id="password">
+        <button id="login-btn">Login</button>
+        <button id="register-btn">Register</button>
+        <div id="auth-error" class="error"></div>
+     </div>
+
+     <!-- Chatroom Section (Hidden Initially) -->
+      <div id="chatroom-section" style="display: none;">
+        <h2>Chatroom</h2>
+        <input type="text" id="chatroom-name" placeholder="Enter chatroom-name">
+        <button id="create-join-btn">Create/Join Chatroom</button>
+        <div id="chatroom-error" class="error"></div>
+      </div>
+
+      <!-- Chat interface -->
+       <div id="messages"></div>
+       <input type="text" id="message-input" placeholder="Type a message...">
+       <button id="send-btn">Send</button>
 </body>
 <script src="/app.js"></script>
 </html>
