chat logging system ,file encryption implementation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -166,7 +166,9 @@
       <div id="messages"></div> 
       <div id="message-input"> 
         <input type="text" id="message-box" placeholder="Type a message..."> 
-        <button id="send-btn">Send</button> 
+        <button id="send-btn">Send</button>
+        <input type="file" id="file-input" style="display: none;">
+        <button onclick="document.getElementById('file-input').click()">Send File</button>
       </div> 
     </div> 
   </div> 
