--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script type="text/javascript" src="dompurify/purify.js"></script>
+  <script type="text/javascript" src="dist/purify.min.js"></script>
   <style> 
     body { 
       font-family: Arial, sans-serif; 
