features: ping, real time encryption, production release

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -255,7 +255,7 @@
       <div id="link-error" class="error-message"></div>
       <input type="text" id="link-url" placeholder="Enter URL (e.g., https://example.com)">
       <input type="text" id="link-text" placeholder="Enter link text">
-      <button id="link-submit">Insert Link</button>
+      <!-- <button id="link-submit">Insert Link</button> -->
       <button id="link-cancel">Cancel</button>
     </div>
   </div>
@@ -284,7 +284,7 @@
         <div id="formatting-buttons">
           <button id="bold-btn" title="Bold"><b>B</b></button>
           <button id="italic-btn" title="Italic"><i>I</i></button>
-          <button id="link-btn" title="Insert Link">🔗</button>
+          <!-- <button id="link-btn" title="Insert Link">🔗</button> -->
           <button id="emoji-btn" title="Insert Emoji">😀</button>
         </div>
         <input type="text" id="message-box" placeholder="Type a message...">
